Mon Aug 20 18:20:51 2001  Steve Huston  <shuston@riverace.com>

        * ace/Process.cpp (pass_handle): Only try to compile the
          DuplicateHandle stuff when !ACE_HAS_WINCE... I think it's
          right this time...

Mon Aug 20 15:54:46 2001  Douglas C. Schmidt  <schmidt@ace.cs.wustl.edu>

	* ace/SUN_Proactor.cpp: Removed the instantiation of
	  ACE_Condition<ACE_Thread_Mutex>.  Thanks to David Trusty
 	  <david.trusty@westwave.com> for reporting this.

Mon Aug 20 15:48:30 2001  Paul Calabrese  <calabrese_p@ociweb.com>

        * bin/msvc_auto_compile.pl:

          Modify script to print config.h contents.

Mon Aug 20 13:14:00 2001  Carlos O'Ryan  <coryan@uci.edu>

        * bin/auto_compile:
          Fixed chdir commands for the auto_compile scripts.

Mon Aug 20 14:33:31 2001  Douglas C. Schmidt  <schmidt@tango.doc.wustl.edu>

        * ace/Message_Queue_T.cpp: If we timeout in the semaphore implementation
          of the message queue in wait_not_full_cond() or
          wait_not_empty_cond() make sure to decrement the "waiters" count
          accordingly!  Thanks to Patrick Rabau <Patrick.Rabau@htc.com>
          for noticing this in the C++NPv1 book version!

Mon Aug 20 07:01:31 2001  Douglas C. Schmidt  <schmidt@ace.cs.wustl.edu>

        * ace/Synch_T.i (release): If owner_ == -1 then return
          -1.  Thanks to Don Hinton <dhinton@swan.fr> for suggesting this.

Mon Aug 20 13:18:51 2001  Steve Huston  <shuston@riverace.com>

        * ace/SOCK.h: Corrected comment on ACE_SOCK ctor being protected,
          not private. Thanks to Don Hinton <dhinton@swan.fr> for
          pointing this out.

        * THANKS: Added Don Hinton to the Hall of Fame.

Mon Aug 20 11:00:50 2001  Chad Elliott  <elliott_c@ociweb.com>

        * ace/OS.h:

          Set the ACE_DEFAULT_FILE_PERMS to the correct value for VxWorks.

        * tests/run_test.lst:

          Removed tests for VxWorks for which the platform has no support.
